<resources>
  <string name="app_name">Libra Manage</string>
  <string name="cafe">Cafe</string>
  <string name="cafe_info">Cafe info</string>
  <string name="cafe_name">Cafe name:</string>
  <string name="place_name">Place name:</string>
  <string name="cafe_address">Cafe address:</string>
  <string name="place_address">Place address:</string>
  <string name="place_type">Place type:</string>
  <string name="edit">Edit</string>
  <string name="remove">Remove</string>
  <string name="accept">Accept</string>
  <string name="edit_home_screen_distance">Edit client cafe radius</string>
  <string name="delete_all_cafes">Delete all cafes</string>
  <string name="show_all_cafes">All cafes stats</string>
  <string name="wait">Wait</string>
  <string name="cafe_name_and_address">Add cafe name, address and location</string>
  <string name="remove_cafe">Do you want to remove this cafe?</string>
  <string name="location">Location:</string>
  <string name="set_location_cafe">Set location cafe</string>
  <string name="show_location_cafe">Show location cafe</string>
  <string name="install_g_maps">Install Google Maps</string>
  <string name="error">Error</string>
  <string name="storage_not_available">Storage is not available</string>
  <string name="photo_from_camera">Photo from camera</string>
  <string name="photo_from_storage">Photo from storage</string>

  <string name="choose_import_location_center">Choose center location for import:</string>
  <string name="picked_location">Picked location:\n %s</string>
  <string name="choose_radius_in_km">Choose radius in km:</string>
  <string name="picked_radius">Picked radius: %skm</string>
  <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
