<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/switcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fl_image_cafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iv_cafe"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:tint="@color/black_25"
                    app:srcCompat="@drawable/ic_restaurant_menu_24dp" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/local_cafe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_cafe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/local_cafe_name"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_toEndOf="@id/local_cafe_name"
                    android:layout_toRightOf="@id/local_cafe_name"
                    android:enabled="false"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/local_cafe_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_cafe_name"
                    android:layout_marginTop="12dp"
                    android:text="@string/place_address"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_cafe_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/local_cafe_address"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_toEndOf="@id/local_cafe_address"
                    android:layout_toRightOf="@id/local_cafe_address"
                    android:enabled="false"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/local_place_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_cafe_address"
                    android:layout_marginTop="12dp"
                    android:text="@string/place_type"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/place_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/local_place_type"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_toEndOf="@id/local_place_type"
                    android:layout_toRightOf="@id/local_place_type"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/show_location_cafe"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</ViewSwitcher>