<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <ScrollView
        android:id="@+id/svMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.android.libramanage.autoimport.AutoImportActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCenterTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/choose_import_location_center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCenterTitle" />

            <Space
                android:id="@+id/mapCenter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintBottom_toBottomOf="@+id/map"
                app:layout_constraintEnd_toEndOf="@+id/map"
                app:layout_constraintStart_toStartOf="@+id/map"
                app:layout_constraintTop_toTopOf="@+id/map" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgMapMarker"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toTopOf="@+id/mapCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_pin" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPickedLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:maxLines="2"
                android:text="@string/picked_location"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/lin_view"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPickedLocation">

                <TextView
                    android:id="@+id/local_place_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_type"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/place_val"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPickedLocation">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbCafe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:padding="6dp"
                    android:text="Cafe" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbRestaurant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="Restaurant" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRadius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="Radius in km (not more than 50km)"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lin_view">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="0.5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--<androidx.appcompat.widget.AppCompatTextView-->
            <!--android:id="@+id/radiusCircleTitle"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="16dp"-->
            <!--android:text="@string/choose_radius_in_km"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="14sp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/tvPickedLocation"-->
            <!--/>-->

            <!--<androidx.appcompat.widget.AppCompatSeekBar-->
            <!--android:id="@+id/radiusSeekbar"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/radiusCircleTitle"-->
            <!--/>-->

            <!--<androidx.appcompat.widget.AppCompatTextView-->
            <!--android:id="@+id/tvPickedRadius"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/radiusSeekbar"-->
            <!--/>-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnImport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="Import"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilRadius" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/flCafesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Choose cafes to import" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCafes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:clipToPadding="false"
            android:paddingBottom="60dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:text="No cafes found"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="Import"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>

</FrameLayout>
